poke/testsuite/poke.pkl/printf-diag-9.pk
/* { dg-do compile } */

/* Malformed tag class.  */

printf "xxx%u70dxxx", 10; /* { dg-error "" } */
